--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 # exsmple Git project
 # now this is my first change to the git-example porject
+# now this is my first change ot the new git-example project from within the GitHUB.
